--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
+    "firebase": "^10.5.0",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
