--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
     "autoprefixer": "10.4.16",
-    "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
     "firebase": "^10.5.0",
     "next": "13.5.4",
@@ -23,5 +22,13 @@
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "eslint": "^8.51.0",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
+  
 }
