--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
     "autoprefixer": "10.4.16",
+    "encoding": "^0.1.13",
     "eslint-config-next": "13.5.4",
     "firebase": "^10.5.0",
     "next": "13.5.4",
@@ -30,5 +31,4 @@
     "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-react-hooks": "^4.6.0"
   }
-  
 }
