--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# firebase
+src/firebase/serviceAccountKey.json
+serviceAccountKey.json
+src/firebase/addClaim.ts
