--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "encoding": "^0.1.13",
     "eslint-config-next": "13.5.4",
     "firebase": "^10.5.0",
+    "firebase-admin": "^11.11.0",
     "framer-motion": "^10.16.4",
     "i18next": "^23.6.0",
     "next": "13.5.4",
