--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-i18next": "^13.3.2",
     "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
