--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.6",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.8.6",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
@@ -25,6 +26,7 @@
     "firebase-admin": "^11.11.0",
     "framer-motion": "^10.16.4",
     "i18next": "^23.6.0",
+    "js-cookie": "^3.0.5",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
