--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "resend": "^2.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
