--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/node": "20.8.6",
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
+    "@vercel/analytics": "^1.1.1",
+    "analytics": "github:vercel/analytics",
     "autoprefixer": "10.4.16",
     "encoding": "^0.1.13",
     "eslint-config-next": "13.5.4",
